# ez_cache

./: .gitignore  Justfile  README.md  TODO.md  pyproject.toml
docs/: architecture.md
ez_cache/: _dict_like.py  _file_backend.py  _json_file_backend.py
src/ez_cache/: _dict_like.py  _file_backend.py  _json_file_backend.py
tests/: test_dict_like.py  test_file_backend.py
