[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stoej_cache"
version = "0.0.1"
authors = [
	{ name = "Lorenzo Panieri", email="panierilorenzo@gmail.com" }
]
description = "Uncomplicated persistent cache and memoization, designed for humans"
readme = "README.md"
requires-python = ">=3.7"  # TODO: figure out the minimum
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent"
]

# [project.urls]
# "Homepage" = "TODO"
# "Bug Tracker" = "TODO"
